--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,17 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+  <script>
+    $.get( "https://chain.so/api/v2/get_info/DOGE", function( response ) {
+      $( "body" )
+              .append( "Name: " + response.data.name + "<br/>" ) // Dogecoin
+              .append( "Total Blocks: " + response.data.blocks + "</br>"); //  current block count
+    }, "json" );
+  </script>
   </body>
 </html>
