--- a/public/index.html
+++ b/public/index.html
@@ -6,19 +6,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="crypto currency explorer"
     />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-
-    <title>React App</title>
+    <title>BitExplorer</title>
   </head>
   <body>
-  <script>
-    $.get( "https://chain.so/api/v2/get_info/DOGE", function( response ) {
-      $( "body" )
-              .append( "Name: " + response.data.name + "<br/>" ) // Dogecoin
-              .append( "Total Blocks: " + response.data.blocks + "</br>"); //  current block count
-    }, "json" );
-  </script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
