rendering example d3 graph

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
           crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -42,6 +44,8 @@
     }
   });
 </script>
+<script src="https://d3js.org/d3.v6.min.js"></script>
+
 </body>
 
 </html>
