--- a/public/index.html
+++ b/public/index.html
@@ -5,33 +5,24 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta
-          name="description"
-          content="crypto currency explorer"
-  />
+  <meta name="description" content="crypto currency explorer"/>
   <title>BitExplorer</title>
   <!-- Bulma Version 0.9.0-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
   <script src="https://kit.fontawesome.com/2828f7885a.js"
           integrity="sha384-WAsFbnLEQcpCk8lM1UTWesAf5rGTCvb2Y+8LvyjAAcxK1c3s5c0L+SYOgxvc6PWG"
           crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet" />
   <script src="https://cdn.amcharts.com/lib/4/core.js"></script>
   <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
   <script src="https://cdn.amcharts.com/lib/4/themes/dark.js"></script>
   <script src="https://cdn.amcharts.com/lib/4/themes/animated.js"></script>
-
 </head>
 
 <body>
-
-
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
-
 <script>
   // Hamburger menu functionality
   document.addEventListener('DOMContentLoaded', () => {
@@ -49,7 +40,5 @@
   });
 </script>
 <script src="https://d3js.org/d3.v6.min.js"></script>
-
 </body>
-
 </html>
